init: firebase deploys

--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,11 @@
 # DX
 CHOKIDAR_USEPOLLING=true
 INTERNAL_STATUS_PORT=8081
+
+# API
+VUE_APP_API_KEY=
+VUE_APP_API_URL=
+
+# FIREBASE
+VUE_APP_FIREBASE_SIGN_IN=
+VUE_APP_FIREBASE_SIGN_UP=
